01/11/2019 JRS

* Moved (most) R source files into the "R" directory.
* Removed irrelevant Powerwave-parsing scripts.  Kept
  parse-powerwave-2.R, but moved it under the R directory.

02/27/2019 JRS

* Removed "Start times.csv" (not complete, not needed)
* Separated raw-data loading functions into a separate file.  Converted these to
more structured tibble tables.
* Created an "R/scripts" directory for one-time scripts; moved
embedded-msa-assembly.R there.
* Wrapped the "mfg-map.R" collation script around a function.
* Migrated additional generated files to data/generated/.  Migrated additional one-time script files to R/scripts.
* Created a SQLite database from the raw data and mappings files.

02/28/2019 JRS

* Moved the generated MSA tables to data/generated/, and adjusted the references
accordingly.
* Removed the PlateComments.csv file (wasn't complete).
* Renamed the "data-tables" directory to "raw-data".
* Moved the MSA "Pool" column from the MSAAssembly table to the MSAMfg table, so
that it conforms to relational normal form.
* Added MSA tables to the database.